<resources>
    <string name="app_name">Bodybuilding</string>
    <string name="bottom_home">Home</string>
    <string name="bottombutton_scheda">Schedul</string>
    <string name="bottom_dieta">Diet</string>
    <string name="bottom_timer">Stopwatch</string>
    <string name="button_start">Start</string>
    <string name="button_pause">Pause</string>
    <string name="button_reset">Reset</string>
    <string name="login_error_message">Error in login</string>
    <string name="login_error_title">Error in title</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="signup_error_message">Signup error</string>
    <string name="signup_error_title">Signup error title</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="input_insert">Insert</string>
    <string name="add_workout">Add workout</string>

</resources>
